cmake_minimum_required(VERSION 3.24)
project(TCPIPNP C)

set(CMAKE_C_STANDARD 11)
#SET(CUR_DIR ./)
#foreach(DIR RANGE ${CUR_DIR})
#    aux_source_directory(SOURCE DIR)
#endforeach()
aux_source_directory(./EP1 SOURCE)
aux_source_directory(./EP2 SOURCE)
aux_source_directory(./EP3 SOURCE)
aux_source_directory(./EP4 SOURCE)
aux_source_directory(./EP5 SOURCE)
aux_source_directory(./EP6 SOURCE)
aux_source_directory(./EP7 SOURCE)
aux_source_directory(./EP8 SOURCE)
aux_source_directory(./EP9 SOURCE)
aux_source_directory(./EP10 SOURCE)
aux_source_directory(./EP11 SOURCE)
aux_source_directory(./EP12 SOURCE)
aux_source_directory(./EP13 SOURCE)
aux_source_directory(./EP14 SOURCE)
aux_source_directory(./EP15 SOURCE)
aux_source_directory(./EP16 SOURCE)
aux_source_directory(./EP17 SOURCE)
aux_source_directory(./EP18 SOURCE)
aux_source_directory(./EP19 SOURCE)
aux_source_directory(./EP20 SOURCE)
aux_source_directory(./EP21 SOURCE)
aux_source_directory(./EP22 SOURCE)
aux_source_directory(./EP23 SOURCE)
aux_source_directory(./EP24 SOURCE)

add_executable(TCPIPNP ${SOURCE})
